<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">RationalCalc</string>
    <string name="percent">%</string>
    <string name="inch">in</string>
    <string name="fraction">/</string>
    <string name="backspace">&lt;&lt;</string>
    <string name="conv">Convert</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="divide">÷</string>
    <string name="stor">Stor</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="multiply">×</string>
    <string name="rcl">Rcl</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="minus">-</string>
    <string name="numberZero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>    
    <string name="plus">+</string>
    <string name="compoundplus">|</string>
    <string name="memoryPlus">m+</string>
    <string name="memoryMinus">m-</string>
    <string name="foot">ft</string>
    <string name="space">&gt;&gt;</string>
    <string name="unit">Unit of Measurement</string>
    <string name="ok">Ok</string>
    <string name="help">Use the menu to set the display unit, precision, rounding mode and display options.\n\nAutomatic mode displays decimal results by default for Metric measurements and fractions for Imperial measurements.\n\nEnter measurements, such as 5.5 or 5 1/2 and a unit, such as yards or meters.\n\nAdd, subtract, multiply and divide the entered measurements.\n\nMeasurement conversions are handled automatically and stored internally at the maximum rational precision.\n\nThe result will be displayed in the specified display unit rounded to the specified precision when you press the equal button.\n\nFor instance, to solve 10 3/8 m + 60.2 ft, press 1, 0, &gt;&gt;, 3, /, 8, Unit of Measurement, Meters, +, 6, 0, ., 2, Unit of Measurement, Feet, =.\n\nTo convert the current measurement, click Convert and select the desired unit.</string>
    <string name="about">Snoffleware Studios LLC\nCopyright 2011\nhttp://snoffleware.com</string>
    <string name="menuPrecision">Precision</string>
    <string name="menuRounding">Rounding</string>
    <string name="menuSelfTest">Self Test</string>
    <string name="menuHelp">Help</string>
    <string name="menuAbout">About</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="helpTitle">Help</string>
    <string name="aboutTitle">About</string>
    <string name="menuDisplayAddUnit">Add Unit</string>
    <string name="menuDisplayDisplayUnit">Display Unit</string>
    <string name="menuDisplayConvertToUnit">Convert To Unit</string>
    <string name="menuDisplayOptions">Display Options</string>
    <string name="errorConvertUnitUnspecified">To convert a measurement, a unit must be specified.</string>
    <string name="errorSolveDivideByUnitlessMeasurement">A quantity can not be divided by a unit measurement.</string>
    <string name="error">error</string>
    <string name="selfTestSetPreferences">Setting test preferences</string>
    <string name="selfTestSetPrecision">Precision</string>
    <string name="selfTestSetRounding">Rounding</string>
    <string name="selfTestSetDisplayOptions">Display Options</string>
    <string name="selfTestSuccess">Success</string>
    <string name="selfTestFailure">Failure</string>
    <string name="selfTestCheckSolve">Check Solve Result</string>
    <string name="selfTestCheckConvert">CheckConvertResult</string>
    <string name="selfTestActual">Actual</string>
    <string name="selfTestExpected">Expected</string>
    <string name="clear">Clear</string>
    <string name="selfTestOverallFailure">-- Failed some tests --</string>
    <string name="selfTestOverallSuccess">-- Passed all tests --</string>
    <string name="errorSolveMultiplyByUnit">A unit measurement can not be multiplied by a unit measurement yet.  Use a quantity instead.</string>
	<string name="aboutChangeLog">v.1.0.8\nChanged default Display Unit to FT/IN.\n\nv.1.0.7\nCleaned up dialogs and removed ft/in from Unit of Measurement dialog.\n\nv.1.0.6\nFixed bug with decimal point to correctly recognize formats .XX and X.XX as valid expressions.\n\nv.1.0.5\nAdded Foot/Inch mode.  To activate Foot/Inch mode, touch Settings - Display Unit - Foot/Inch.\n\nIf you have any problems, please leave a comment at rationalcalc.com with any calculation that returns an incorrect result.\n\nThanks for using RationalCalc!\n\nv.1.0.4\nIncreased the font size for improved legibility.\n\nv.1.0.3\nAdded display options menu preference for selecting whether to show results as fraction or decimal.\n\nAutomatic mode displays decimal results by default for Metric measurements and fractions for Imperial measurements.\n\nFractional always displays results as fractions.\n\nDecimal always displays results as decimals.\n\nv.1.0.2\nUpgraded apache-commons-math to v. 2.1 to fix the bug: "When multiplying two BigFraction objects with numerators larger than will fit in an java-primitive int the result of BigFraction.ZERO is incorrectly returned."\n\nv 1.0.0:\nInitial release\n\n</string>
    <string name="aboutChangeLogTitle">-- Change Log --</string>
    <string name="aboutNewReleaseTitle">-- New Release --</string>
    <string name="aboutNewReleaseChangeLog">v.1.0.8\nChanged default Display Unit to FT/IN.\n\nv.1.0.7\nCleaned up dialogs and removed ft/in from Unit of Measurement dialog.\n\nv.1.0.6\nFixed bug with decimal point to correctly recognize formats .XX and X.XX as valid expressions.\n\nv.1.0.5\nAdded Foot/Inch mode.  To activate Foot/Inch mode, touch Settings - Display Unit - Foot/Inch.\n\nIf you have any problems, please leave a comment at rationalcalc.com with any calculation that returns an incorrect result.\n\nThanks for using RationalCalc!\n\n</string>
    <string name="aboutVersionNumber">1.0.8</string>
    <string name="aboutDescription">Calculates length with automatic unit conversions and rounds the results to nearest common fractions.</string>
    <string name="aboutContact">Please email your suggestions and comments to:\n\ntimothyleerussell@gmail.com</string>
<string name="errorSolveDivideUnitByUnit">A unit measurement can not be divided by a unit measurement yet.  Use a quantity instead.</string>
<string name="displayDecimal">Decimal</string>
    <string name="displayFractional">Fractional</string>
    <string name="displayAutomatic">Automatic</string>
</resources>
